<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaomQoshish">

    <FrameLayout
        style="@style/ActionBarBackground"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/taom_qoshish2"
            android:textColor="@color/white" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_food_name"
            style="@style/edttcardBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:hint="@string/taom_nomi"
            android:padding="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edt_required_products"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/edt_required_products"
            style="@style/edttcardBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:hint="@string/kerakli_mahsulotlar"
            android:padding="15dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/edt_cooking_mode"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_food_name" />


        <EditText
            android:id="@+id/edt_cooking_mode"
            style="@style/edttcardBackground"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:hint="@string/taom_tayyorlanish_tartibi"
            android:padding="15dp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/saqlash"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_required_products" />


        <androidx.cardview.widget.CardView
            android:id="@+id/saqlash"
            style="@style/cardBackground"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_cooking_mode">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saqlash"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>